--- a/RecipeDiary/app/src/main/res/values/colors.xml
+++ b/RecipeDiary/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="navigationBarColor">#000000</color>
-
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
+
