--- a/RecipeDiary/app/src/main/res/layout/signupactivity.xml
+++ b/RecipeDiary/app/src/main/res/layout/signupactivity.xml
@@ -51,8 +51,7 @@
 
         <EditText android:id="@+id/input_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress" >
+            android:layout_height="wrap_content" >
 
         </EditText>
 
@@ -67,8 +66,7 @@
 
         <EditText android:id="@+id/input_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" >
+            android:layout_height="wrap_content" >
 
         </EditText>
 
